# Multi-Robot

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/gazebo_swarm_robot_tb3/: gazebo_stop_robot  gazebo_swarm_robot_control_angle  gazebo_swarm_robot_control_x_position
devel/lib/pkgconfig/: gazebo_swarm_robot_tb3.pc  turtlebot3_description.pc
devel/share/gazebo_swarm_robot_tb3/cmake/: gazebo_swarm_robot_tb3Config.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
src/: Gazebo多机仿真平台使用手册.txt  Readme.md
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/: CMakeLists.txt  swarm_robot_control.cpp
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/include/: swarm_robot_control.h
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/launch/: gazebo_swarm_robot_7.launch
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/src/: circle.cpp  exp4.cpp  formation_change.cpp  formation_circle.cpp  formation_cross.cpp  formation_triangle.cpp  main_angle.cpp  main_angle_gu.cpp  move_formation.cpp  move_formation_cross.cpp  star.cpp  stop_robot.cpp  swarm_robot_control.cpp  test.cpp  test_2.cpp
zx/: main_test2.cpp  swarm_robot_control.h
